--- a/style.css
+++ b/style.css
@@ -153,8 +153,97 @@ h3::before
     background: transparent;
     border: 1px solid #fff;
 }
+.page-link li
+{
+    height: 25px;
+    width: 25px;
+    list-style: none;
+    display: inline-block;
+    cursor: pointer;
+}
+.page-link li:hover, .active
+{
+    color: #fff;
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+}
+.left-arrow
+{
+    color: #999;
+}
+.right-arrow
+{
+    color: #29b929;
+}
 
+/*<!----Site Stats---->*/
 
+#site-stats
+{
+    padding: 100px 0;
+}
+#site-stats h3
+{
+    margin-bottom: 30px;
+}
+.stats-box
+{
+    padding: 30px;
+    border-radius: 10px;
+    margin: 20px 0;
+    box-shadow: 0 2px 40px 0 rgba(110,130,208, .18);
+}
+.stats-box .fa
+{
+    font-size: 30px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+/*<!----App Banner---->*/
+
+#app-banner
+{
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a);
+    padding: 50px 0;
+}
+#app-banner h1
+{
+    margin-top: 20px;
+    color: #fff;
+}
+#app-banner img
+{
+    width: 150px;
+    margin: 50px 0;
+}
+
+/*<!----Footer---->*/
+
+#footer
+{
+    background: #f8f9fd;
+    padding: 20px 10px 8px;
+}
+.footer-image
+{
+    margin: 30px 0;
+}
+.footer p
+{
+    color: #333;
+}
+#footer a img
+{
+    width: 50px;
+}
+.fa-heart
+{
+    color: red;
+}
+hr
+{
+    background-color: #ccc;
+}
 
 
 
